Fix Firefox overflow bug

--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -1,6 +1,7 @@
 .composer {
 	.write-container {
 		margin: 0;
+		overflow: hidden;
 	}
 
 	.redactor-box {
